app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *= require_self
 */
@import 'bootstrap';
@import 'variables.scss';

.btn-outline-info {
    @include button-outline-variant($colorCyan, $colorWhite, lighten($colorCyan,5%), $colorCyan);
}
.btn-primary {
    @include button-variant($colorCyan, darken($colorCyan, 7.5%), darken($colorCyan, 10%), lighten($colorCyan,5%), lighten($colorCyan, 10%), 
    darken($colorCyan,30%));
}



body {
    @include media-breakpoint-down(md) {
        font-size: 0.75rem !important;
    }
}

.ql-editor {
    min-height: 6rem;
}

.ql-formats:last-of-type {
    float: right;
    .ql-send {
      color: $colorWhite !important;
      background-color: $colorGreen !important;
      border-color: $colorGreen !important;
    
      &:focus,
      &.focus {
        color: $colorWhite !important;
        background-color: darken($colorGreen, 10%) !important;
            border-color: darken($colorGreen, 25%) !important;
      }
      &:hover {
        color: $colorWhite !important;
        background-color: darken($colorGreen, 10%) !important;
            border-color: darken($colorGreen, 12%) !important;
      }
      width: 100%;
      font-size: 14px;
        padding: 4.5px 20px !important;
        border-radius: 3px;
        &:after {
            content: "SEND";
            position: relative;
            bottom: 2px;
        }
    }
}
.inactive .ql-editor {
  padding:0;
  line-height:inherit;
  min-height: auto !important;
}

.inactive .ql-editor p {
  padding:inherit;
  margin-bottom:10px;
}

.inactive .ql-toolbar {
  display:none;
}

.inactive .ql-container.ql-snow {
  border:none;
  font-family:inherit;
  font-size:inherit;
}

.row {
    @include media-breakpoint-down(md) {
    }
}

#body-container {
    @include media-breakpoint-down(md) {
        margin-top: 15px;
        padding: 0 5px;
    }
    padding-top: 15px;
    padding-bottom: 15px;

}

#articles, #article-body, #comments {
    margin: 1rem 2rem;
}
.article {
    margin-bottom: -1px;
    transition: border-color 1s;
    border: 1px solid rgba(0,0,0,.125);
    cursor: pointer;
    &:hover, &:focus {
        background: #f8f9fa;
    }
    &:active {
        background: #e9ecef;
    }
    .article-body {
        word-break: break-word;
        justify-content: center;
    }
    .article-img {
        img {
            width: 80px;
            height: 60px;
        }
    }
    .article-title {
        max-height: 2.25rem;
        overflow-x: hidden;
        display: block;
        margin: 0;
        text-decoration: none;
        color: #000;
    }
    .article-author {
        color: $colorGrey;
    }
    a {
        text-decoration: none;
    }
    .article-action {
        position: absolute;
        bottom: 0;
        a {
            color: $colorRed;
        }
        > *:not(:first-child) {
            margin-left: 1rem;
            color: $colorGrey;
        }
    }
}
.article-vote, .comment-action {
    a {
        color: $colorGrey;
        transition: 1s color;
        text-decoration: none;
        &:hover, &.active {
            color: $colorRed;
        }
    }
    .vote-count {
        font-weight: bold;
        text-align: center;
    }

}
.comment-action > * {
    padding-right: 1rem;
}
.page-item {
    .page-link {
        color: $colorCyan;
    }
    &.active  .page-link {
        color: $colorWhite;
        background-color: $colorCyan;
        border-color: $colorCyan;
    }
}

